Error Mitigation/MagiCoder/Data/javax_net/javax_netOutputResult.txt
Sample: ServerSocketFactory_1
----------------------------------------------------------------
stdout:
javax.net.DefaultServerSocketFactory@74a10858

================================================================

Sample: ServerSocketFactory_2
----------------------------------------------------------------
output:
./Data/javax_net/javaFiles/ServerSocketFactory_2.java:8: error: cannot find symbol
            ServerSocket serverSocket = ServerSocketFactory.getDefault().createServerSocket(8080);
                                        ^
  symbol:   variable ServerSocketFactory
  location: class ServerSocketFactory_2
1 error


================================================================

Sample: ServerSocketFactory_3
----------------------------------------------------------------
stdout:
Server socket created successfully.

================================================================

Sample: ServerSocketFactory_4
----------------------------------------------------------------
stdout:
Server socket created successfully.

================================================================

Sample: SocketFactory_1
----------------------------------------------------------------
stdout:
javax.net.DefaultSocketFactory@74a10858

================================================================

Sample: SocketFactory_2
----------------------------------------------------------------
output:
./Data/javax_net/javaFiles/SocketFactory_2.java:10: error: unreported exception IOException; must be caught or declared to be thrown
            Socket socket = factory.createSocket();
                                                ^
1 error


================================================================

Sample: SocketFactory_3
----------------------------------------------------------------
stdout:
Socket created successfully

================================================================

Sample: SocketFactory_4
----------------------------------------------------------------
stderr:
error: no class declared in source file

================================================================

